[package]
name = "natural-date-rs"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "A parser to convert natural language date and time specifications into DateTime."
authors = ["Sofiia Budilova <https://github.com/koejdga>", "Berkus Decker <berkus+crates@metta.systems>"]
repository = "https://github.com/berkus/natural-date-rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
chronoutil = "0.2"
pest = "2.8"
pest_derive = "2.8"
thiserror = "2.0"
